<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="ST_RepetitionRate" Id="{3e1b9375-10c8-4393-b377-563ae32a885a}">
    <Declaration><![CDATA[TYPE ST_RepetitionRate :
STRUCT
	RepRateAboveThresholdSt : BOOL;
	RepetitionRateHzSt : REAL;
	RepetitionRateHzThreshold : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>